<resources>
    <string name="app_name">Inventory</string>
    <string name="sale">Sale</string>
    <string name="item_name">Shirt</string>
    <string name="item_name_hint">Name</string>
    <string name="item_description">Shirt with long sleeves and strips</string>
    <string name="item_description_hint">Description</string>
    <string name="item_price">0.0</string>
    <string name="item_price_label">Price</string>
    <string name="item_amount">0</string>
    <string name="item_amount_label">Amount</string>
    <string name="supplier_email">prueba@supplier.com</string>
    <string name="supplier_email_label">Supplier Email</string>
    <string name="currency">USD</string>
    <string name="button_">button</string>
    <string name="amount_error">Amount must be positive</string>
    <string name="name_error">Item must have a name</string>
    <string name="description_error">Item must have a description</string>
    <string name="price_empty_error">Price cannot be 0. It must be a positive amount</string>
    <string name="amount_empty_error">Amount cannot be 0. It must be a positive amount</string>
    <string name="price_error">Price must be positive</string>
    <string name="email_error">Email must have a valid format</string>
    <string name="email_error_null">Item must have supplier\'s email</string>
    <string name="missing_information">You must fill all the information before saving an item</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_item_failed">The item couldn\'t be inserted</string>
    <string name="editor_insert_item_successful">The item was inserted</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this pet?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Title Edit Activity for new Item -->
    <string name="editor_activity_title_new_item">Add an Item</string>

    <!-- Title Edit Activity for existing Item -->
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Pet deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting pet</string>

    <!-- Toast message in editor when current item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_successful">Item updated</string>

    <!-- Toast message in editor when current item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_failed">Error with updating item</string>

    <!-- Toast invalid email -->
    <string name="invalid_email">Invalid email. Input again</string>

    <!-- Text button to select item picture -->
    <string name="select_item_picture">Load picture</string>

    <!-- Text if the name is empty -->
    <string name="error_empty_name">A new item must has at least a name</string>

    <!-- Text invalid price or amount -->
    <string name="invalid_price_or_amount">Invalid price or amount. Cannot be negative</string>

    <!-- Invalid image value on ContentProvider -->
    <string name="image_error">Uri not valid or null</string>

    <!-- Empty view text on Activity Catalgo -->
    <string name="empty_view_text">Please enter the first item by pressing the button below</string>

</resources>
