<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="4dp"
    android:orientation="vertical"
    tools:context="com.acelerem.android.inventory.EditorActivity">


    <!-- Image view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            />
        <Button
            android:id="@+id/buttonLoadPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_item_picture"/>




    </LinearLayout>


    <!-- Product information -->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Product Name"
            style="@style/CategoryStyle"/>


            <!-- Input Fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name Field -->
            <EditText
                android:id="@+id/edit_item_name"
                android:hint="@string/item_name_hint"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </RelativeLayout>

    </LinearLayout>

    <!-- Product description -->
    <LinearLayout
        android:id="@+id/container_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Product Description"
            style="@style/CategoryStyle"/>


        <!-- Input Fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name Field -->
            <EditText
                android:id="@+id/edit_item_description"
                android:hint="@string/item_name_hint"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </RelativeLayout>

    </LinearLayout>




    <!-- Item price -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/item_price_label"
            style="@style/CategoryStyle"/>

        <!--Input Field -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Price Field -->
            <EditText
                android:id="@+id/edit_item_price"
                android:text="@string/item_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />

        </RelativeLayout>


    </LinearLayout>


    <!-- Item amount -->
    <LinearLayout
        android:id="@+id/container_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/item_amount_label"
            style="@style/CategoryStyle" />

        <!-- Input Field -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!--Amount Field -->
            <EditText
                android:id="@+id/edit_item_amount"
                android:text="@string/item_amount"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>

        </RelativeLayout>

    </LinearLayout>

    <!-- Item email -->

    <LinearLayout
        android:id="@+id/container_supplier_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/supplier_email_label"
            style="@style/CategoryStyle" />

        <!-- Input Field -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!--Amount Field -->
            <EditText
                android:id="@+id/edit_supplier_email"
                android:inputType="textEmailAddress"
                style="@style/EditorFieldStyle"/>

        </RelativeLayout>

    </LinearLayout>

    <!-- Save Button -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_save"
            />


    </LinearLayout>



</LinearLayout>
